apps/networking/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tailscale-gateway
  namespace: networking
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:    
      tailscale.com/expose: "true"
      tailscale.com/hostname: "ingress"
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.overburrow.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: overburrow-wildcard-tls
